index source field dropdown ui changes

--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -755,6 +755,9 @@
   }
 }
 
+.source-field-dropdown.dropdown-menu.content-menu{
+  width: 100%;
+}
 .source-field-dropdown.dropdown-menu.content-menu li a {
   line-height: 40px;
   padding: 0 10px;
