--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -267,13 +267,15 @@
                   <div class="label-text" *ngIf="map.operation === 'rename'">
                     {{'workbench.field_name' | translate}}
                   </div>
-                  <input type="text" placeholder="{{'workbench.enter_target' | translate}}" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown"
-                    [(ngModel)]="map.source_field" />
-                    <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
-                      <perfect-scrollbar class="scroll-search-field">
-                          <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] " (click)="map.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
-                      </perfect-scrollbar>
-                  </ul>
+                  <div class="position-relative ">
+                    <input type="text" placeholder="{{'workbench.enter_target' | translate}}" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown"
+                      [(ngModel)]="map.source_field" />
+                      <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                        <perfect-scrollbar class="scroll-search-field">
+                            <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] " (click)="map.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                        </perfect-scrollbar>
+                    </ul>
+                  </div>
                 </div>
                 <div class="kr-sg-input-text col-4 input-box">
                   <div class="label-text" *ngIf="map.operation === 'copy'">
@@ -287,7 +289,7 @@
                     ">
                     {{'workbench.field_name' | translate}}
                   </div>
-                  <div class="position-relative">
+                  <div class="position-relative ">
                     <input type="text" placeholder="{{'workbench.enter_target' | translate}}" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
                     [(ngModel)]="map.target_field" />
                     <ul class="source-field-dropdown dropdown-menu content-menu" *ngIf="map.operation !== 'copy' && map.operation !== 'rename'" id="fields-search-with-dropdown-menu">
@@ -386,7 +388,7 @@
                 ">
                 {{'workbench.field_name' | translate}}
               </div>
-              <div class="position-relative">
+              <div class="position-relative ">
                 <input type="text" placeholder="{{'workbench.enter_source_field' | translate}}" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
                 [(ngModel)]="
                   newMappingObj.field_mapping.defaultValue.source_field
@@ -418,7 +420,7 @@
                 ">
                 {{'workbench.field_name' | translate}} 
               </div>
-              <div class="position-relative">
+              <div class="position-relative ">
                 <input type="text" placeholder="{{'workbench.enter_name' | translate}}" class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown" maxlength="60" [(ngModel)]="
                   newMappingObj.field_mapping.defaultValue.target_field
                 " />
@@ -490,13 +492,15 @@
                 </div>
                 <div class="kr-sg-input-text col-4 input-box">
                   <div class="label-text">{{'workbench.source_field' | translate}}</div>
-                  <input type="text" placeholder="{{'workbench.value' | translate}}" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown"
-                    [(ngModel)]="map.source_field" />
-                    <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
-                      <perfect-scrollbar class="scroll-search-field">
-                          <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] " (click)="map.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
-                      </perfect-scrollbar>
-                  </ul>
+                  <div class="position-relative ">
+                    <input type="text" placeholder="{{'workbench.value' | translate}}" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown"
+                      [(ngModel)]="map.source_field" />
+                      <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                        <perfect-scrollbar class="scroll-search-field">
+                            <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] " (click)="map.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                        </perfect-scrollbar>
+                    </ul>
+                  </div>
                 </div>
                 <div class="kr-sg-dropdowns col-4 input-box" *ngIf="selectedStage.type === 'semantic_meaning'">
                   <div class="label-text">{{'workbench.choose_model' | translate}}</div>
@@ -622,14 +626,16 @@
             ">
             <div class="kr-sg-input-text col-4 input-box">
               <div class="label-text">{{'workbench.source_field' | translate}}</div>
-              <input type="text" placeholder="{{'workbench.value' | translate}}"class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown" maxlength="60" [(ngModel)]="
-                  newMappingObj[selectedStage.type].defaultValue.source_field
-                " />
-                <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
-                  <perfect-scrollbar class="scroll-search-field">
-                      <li *ngFor="let suggesition of fields | filter : [newMappingObj[selectedStage.type].defaultValue.source_field, 'fieldName'] " (click)="newMappingObj[selectedStage.type].defaultValue.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
-                  </perfect-scrollbar>
-              </ul>
+              <div class="position-relative ">
+                <input type="text" placeholder="{{'workbench.value' | translate}}"class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown" maxlength="60" [(ngModel)]="
+                    newMappingObj[selectedStage.type].defaultValue.source_field
+                  " />
+                  <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                    <perfect-scrollbar class="scroll-search-field">
+                        <li *ngFor="let suggesition of fields | filter : [newMappingObj[selectedStage.type].defaultValue.source_field, 'fieldName'] " (click)="newMappingObj[selectedStage.type].defaultValue.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                    </perfect-scrollbar>
+                </ul>
+              </div>
             </div>
             <div class="kr-sg-dropdowns col-4 input-box" *ngIf="selectedStage.type === 'semantic_meaning'">
               <div class="label-text">{{'workbench.choose_model' | translate}}</div>
