--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2518,3 +2518,81 @@ display: none !important;
 .top-down-search-background-div .topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details .content-data-sec.facets-disabled {
   padding: 0px 0 0 20px;
 }
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count {
+  float: left;
+  margin-right: 13px;
+  position: relative;
+}
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count .tooltip-appearnces .tooltip_text {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  width: 96px;
+  background-color: #555;
+  text-align: center;
+  transition: opacity .6s;
+  margin-left: 0;
+  background: #202124;
+  box-shadow: 0px -4px 4px rgb(32 33 36 / 20%);
+  border-radius: 4px;
+  padding: 10px 15px;
+  bottom: 24px;
+  z-index: 99;
+  left: -43px;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 14px;
+}
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count .tooltip-appearnces .tooltip_text::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 42px;
+  margin-left: 0;
+  border-width: 6px;
+  border-style: solid;
+  border-color: #202124 transparent transparent transparent;
+}
+
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count .tooltip-appearnces-clicks .tooltip_text::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 25px;
+  margin-left: 0;
+  border-width: 6px;
+  border-style: solid;
+  border-color: #202124 transparent transparent transparent;
+}
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count .tooltip-appearnces-clicks .tooltip_text {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  width: 60px;
+  background-color: #555;
+  text-align: center;
+  transition: opacity .6s;
+  margin-left: 0;
+  background: #202124;
+  box-shadow: 0px -4px 4px rgb(32 33 36 / 20%);
+  border-radius: 4px;
+  padding: 10px 15px;
+  bottom: 24px;
+  z-index: 99;
+  left: -25px;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count .tooltip-appearnces-clicks:hover .tooltip_text{
+  visibility: visible;
+  opacity: 1;
+}
+
+.topdown-search-main-container .all-result-container .customization .customization-tile .appearences-count .tooltip-appearnces:hover .tooltip_text{
+  visibility: visible;
+  opacity: 1;
+}
