--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -22,7 +22,7 @@
     <ng-container *ngIf="!invoices.length && !loading">
         <div class="empty-invoice">
             <div class="img-block">
-                <img src="assets/icons/invoices/empty-log.svg">
+                <img src="assets/icons/invoices/invoice-empty-log.png">
             </div>
             <!-- <div class="empty-text">After subscribing to any of the plans offered, your invoices will appear here</div> -->
         </div>
