--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -25,7 +25,7 @@
     <ng-container *ngIf="!usageLogs.length && !loading && !searchUsageLog && !showSearch">
         <div class="empty-usage-log">
             <div class="img-block">
-                <img src="assets/icons/usage-log/empty-log.svg">
+                <img src="assets/icons/usage-log/empty-log.png">
             </div>
             <div class="empty-text">{{"ussageLog.usage_log_will_appear_once_the_app_is_active" | translate}}</div>
         </div>
