--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -95,7 +95,7 @@
     <ng-container *ngIf="!(traits.traitGroups &&  traits.traitGroups.length)">
         <perfect-scrollbar class="empty-scroll">
             <div  class="empty-landing-screen" >
-            <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()" src="assets/images/traits-empty.svg"></div>
+            <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()" src="assets/images/traits-empty.png"></div>
             <ng-container *ngIf="loadImageText">
                 <div class="empty-title">{{'traits.you_havenot_added_any_traits_yet' | translate}}</div>
                 <div class="desc-text">{{'traits.traits_are_specific_entities' | translate}}
